--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -1,8 +1,17 @@
 .card {
   display: flex;
   flex-direction: column;
+  &__container:not(:last-child) {
+    margin-bottom: 1.5rem;
+  }
+  @include breakpoint-up(medium) {
+    flex-direction: row;
+    justify-content: space-around;
+    &__container:not(:last-child) {
+      margin-right: 1.5rem;
+    }
+  }
   @include breakpoint-up(large) {
-    display: flex;
     flex-direction: row;
     justify-content: space-around;
     &__container:not(:last-child) {
@@ -10,49 +19,90 @@
     }
   }
   &__container {
-    width: 18.75rem;
-    height: 26.25rem;
+    width: 15rem;
+    height: 15rem;
     position: relative;
     background-color: #fff;
-    border-radius: 1.25rem;
     box-shadow: 0 15px 25px rgba(0, 0, 0, 0.2);
+    border-radius: 1rem;
+    @include breakpoint-up(medium) {
+      width: 12rem;
+      height: 15rem;
+    }
+    @include breakpoint-up(large) {
+      width: 18.75rem;
+      height: 26.25rem;
+      border-radius: 1.25rem;
+    }
   }
   &__name {
     position: relative;
     width: 100%;
     height: 100%;
-    clip-path: circle(180px at center 0);
-    text-align: center;
-    color: #fff;
+    font-size: 1.6rem;
     text-transform: uppercase;
-    font-size: 2.5rem;
+    color: #fff;
     font-weight: 700;
-    vertical-align: center;
-    padding: 50px 0;
+    text-align: center;
+    clip-path: circle(7.25rem at center 0);
+    padding: 2rem 0;
+    @include breakpoint-up(medium) {
+      font-size: 1.3rem;
+      clip-path: circle(5.7rem at center 0);
+    }
+    @include breakpoint-up(large) {
+      font-size: 2.5rem;
+      clip-path: circle(9.375rem at center 0);
+      font-size: 2rem;
+      padding: 3.125rem 0;
+    }
   }
 
   &__content {
     width: 100%;
     position: absolute;
-    bottom: 1.375rem;
+    top: 6.5rem;
     display: flex;
     flex-direction: column;
     text-align: center;
-    padding: 1.25rem;
+    padding: 1rem;
+    @include breakpoint-up(medium) {
+      top: 5rem;
+      padding: 1rem;
+    }
+    @include breakpoint-up(large) {
+      top: 10.5rem;
+      padding: 1.25rem;
+    }
   }
 
   &__number {
-    font-size: 2.25rem;
     font-weight: 400;
-    margin: 0;
-    padding: 1.25rem 0;
+    font-size: 1.8rem;
+    @include breakpoint-up(medium) {
+      font-size: 1.6rem;
+      padding: 0.5rem 0;
+    }
+
+    @include breakpoint-up(large) {
+      font-size: 2.25rem;
+      padding: 1.25rem 0;
+    }
   }
 
   &__date {
+    font-size: 0.875rem;
     color: rgba(0, 0, 0, 0.5);
+    @include breakpoint-up(large) {
+      font-size: 1rem;
+    }
   }
 
   &__desc {
-    font-size: 1.125rem;
+    margin-top: 0.5rem;
+    @include breakpoint-up(large) {
+      font-size: 1.125rem;
+      margin-top: 1rem;
+    }
   }
 }
