--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -1,5 +1,6 @@
 .card {
   display: flex;
+  align-items: center;
   flex-direction: column;
   &__container:not(:last-child) {
     margin-bottom: 1.5rem;
