--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -17,12 +17,13 @@ body {
   line-height: 1.3;
 }
 
-.flex {
-  display: flex;
-  justify-content: space-between;
+.container {
+  max-width: 1400px;
+  margin: 0 auto;
+  width: 100%;
 }
 
-.container {
-  max-width: 69.375rem;
-  margin: auto;
+header {
+  text-align: center;
+  margin-bottom: 3rem;
 }
